--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Prompts user for Member info, then generates a profile.",
   "main": "index.js",
   "scripts": {
+    "main": "node index.js",
     "test": "jest"
   },
   "repository": {
